# Quantum-infinity-patcher

./: .gitignore  .qip.example.yaml  AGENTS.md  Dockerfile  PRD.md  README.md  docker-compose.yaml  pyproject.toml
scripts/: build-agent.ps1  setup.ps1
src/agent/: __init__.py  analyzer.py  deduplicator.py  main.py  patcher.py  reporter.py  scanner.py  validator.py
src/agent/patchers/: __init__.py  dep_bump.py
src/qip/: __init__.py  __main__.py  cli.py  config.py  deployer.py  docker_manager.py  doctor.py  history.py  models.py  reviewer.py  utils.py
tests/: test_config.py  test_deduplicator.py  test_scanner.py
web/: app.js  index.html  style.css
