[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum-infinity-patcher"
version = "0.1.0"
description = "Local-first security CVE agent — scan, fix, review, deploy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "QIP Team" }]
keywords = ["security", "cve", "scanner", "docker", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "docker>=7.0",
    "gitpython>=3.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
qip = "qip.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/qip", "src/agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
